--- a/app/web/manifest.json
+++ b/app/web/manifest.json
@@ -1,14 +1,19 @@
 {
-    "name": "faro",
-    "short_name": "faro",
+    "name": "Sistema de Gestión Faro",
+    "short_name": "Sistema Faro",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#FF8C00",
+    "theme_color": "#FF8C00",
+    "description": "Sistema de Gestión Empresarial - Control de asistencia, agenda, evaluaciones y reportes.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
+        {
+            "src": "favicon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml"
+        },
         {
             "src": "icons/Icon-192.png",
             "sizes": "192x192",
@@ -18,18 +23,6 @@
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "icons/Icon-maskable-512.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
         }
     ]
 }
