Remove framework field from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,5 @@
     }
   ],
   "buildCommand": "cd faro/app && flutter build web --release",
-  "outputDirectory": "faro/app/build/web",
-  "framework": "other"
+  "outputDirectory": "faro/app/build/web"
 }
