--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,10 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "faro/app/build/web/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/faro/app/build/web/index.html"
-    }
-  ],
   "buildCommand": "cd faro/app && flutter build web --release",
-  "outputDirectory": "faro/app/build/web"
+  "outputDirectory": "faro/app/build/web",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
