--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-    "buildCommand": "echo 'Build already done'",
+    "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh",
     "outputDirectory": "app/build/web",
     "rewrites": [
         {
             "source": "/(.*)",
             "destination": "/index.html"
         }
-    ]
+    ],
+    "installCommand": "echo 'No install needed'"
 }
