--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh",
+    "buildCommand": "echo 'Build already done locally'",
     "outputDirectory": "app/build/web",
     "rewrites": [
         {
