feat: Implementar Asistente Virtual con IA para documentos
- Agregar controladores para header y chat del asistente
- Implementar widget de chat con interfaz moderna
- Integrar selectores de documento y modelo de IA
- Aplicar estilos consistentes con el control de asistencia
- Implementar persistencia local con SharedPreferences
- Agregar documentación completa del asistente virtual

Archivos principales:
- assistant_header_controller.dart: Controlador para selectores
- assistant_chat_controller.dart: Controlador del chat con persistencia
- assistant_chat_widget.dart: Widget principal del chat
- view_header_widget.dart: Integración con controles del header
- app_layout.dart: Soporte para layout especializado
- dependency_injection.dart: Registro de controladores
- pubspec.yaml: Agregar dependencia shared_preferences

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   # URL Launcher para abrir enlaces externos
   url_launcher: ^6.2.5
 
+  # SharedPreferences para persistencia local
+  shared_preferences: ^2.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
