fix: Configurar instalación automática de Flutter en Vercel
- Actualizar vercel.json para usar script de build personalizado
- Modificar vercel-build.sh para instalar Flutter automáticamente
- Resolver error 'flutter: command not found' en Vercel
- Usar git clone para descargar Flutter stable en el entorno de build

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "cd app && flutter build web",
+    "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh",
     "outputDirectory": "app/build/web",
     "rewrites": [
         {
@@ -7,6 +7,6 @@
             "destination": "/index.html"
         }
     ],
-    "installCommand": "cd app && flutter pub get",
+    "installCommand": "echo 'Flutter will be installed in build step'",
     "framework": null
 }
