✨ Sistema flexible implementado con formulario de incidencias y SnackBar personalizado
🎯 Mejoras principales:
- ✅ Sistema flexible para agregar widgets a vistas sin layouts específicos
- ✅ Formulario de incidencias funcional con estilo consistente
- ✅ SnackBar personalizado con colores del tema y iconos elegantes
- ✅ Optimización de rendimiento con widgets ultra-simplificados
- ✅ Tema oscuro/claro completamente funcional
- ✅ Componentes reutilizables (AppButton, AppCard, AppSnackBar)

🔧 Cambios técnicos:
- Nuevo UltraSimplifiedViewWidget para máxima velocidad
- AppSnackBar con iconos estilo elegantGreen
- Eliminación de archivos no utilizados
- Refactoring de arquitectura hexagonal
- Integración completa con ThemeProvider

📱 Funcionalidades:
- Control de asistencia optimizado
- Asistente virtual funcional
- Formulario de incidencias con validación
- Navegación fluida entre vistas
- SnackBars consistentes en toda la app

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   # SharedPreferences para persistencia local
   shared_preferences: ^2.2.2
 
+  # Localización para español
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
