--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
     sdk: flutter
   intl: ^0.20.2
 
+  # UUID para generación de IDs únicos
+  uuid: ^4.5.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
