🎉 Implementar Test de Holland con efecto confeti
✨ Nuevas funcionalidades:
- Test de Holland completo con 60 preguntas en 6 bloques
- Sistema de evaluación vocacional con 6 tipos de personalidad
- Pantalla de resultados detallados con gráficos y sugerencias
- Efecto de confeti automático al completar el test
- Botón de repetición de confeti

🎨 Mejoras visuales:
- Colores consistentes con el tema del proyecto
- Campos de texto con estilo del formulario de incidencias
- Botones verdes elegantes (sin tonos azules)
- Soporte completo para tema claro/oscuro
- Interfaz limpia sin etiquetas redundantes

🏗️ Arquitectura:
- Entidad HollandTest con lógica de cálculo de resultados
- Controlador HollandTestController para gestión de estado
- Widgets reutilizables del sistema existente
- Integración completa en el módulo de Evaluaciones

📦 Dependencias:
- Agregado paquete confetti: ^0.7.0 para efectos de celebración

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   # UUID para generación de IDs únicos
   uuid: ^4.5.1
 
+  # Confetti para efectos de celebración
+  confetti: ^0.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
