feat: Implementar sistema completo de agendamiento con calendario interactivo
- ✅ Agregar dependencia syncfusion_flutter_calendar para calendario avanzado
- ✅ Crear entidades de dominio: Appointment, Schedule, SchoolSchedule
- ✅ Implementar SchedulingController para gestión de estado
- ✅ Desarrollar SchedulingWidget con vista de calendario interactiva
- ✅ Crear formularios para citas y horarios escolares
- ✅ Integrar sistema en vista 'Agenda' del menú principal
- ✅ Implementar horarios escolares con fecha, hora, asignatura y profesor
- ✅ Permitir creación de eventos personalizados
- ✅ Agregar funcionalidad de arrastrar y soltar eventos
- ✅ Incluir datos de ejemplo para demostración
- ✅ Resolver conflictos de imports y errores de compilación
- ✅ Optimizar rendimiento del DataSource del calendario

Funcionalidades implementadas:
- 📅 Calendario mensual con vista de agenda
- 🎨 Colores diferenciados por tipo de evento
- 📝 Formularios completos para citas y horarios
- 🔄 Toggle para mostrar/ocultar horarios escolares
- 📊 Datos de ejemplo precargados
- 🎯 Interfaz responsive y moderna

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   # Confetti para efectos de celebración
   confetti: ^0.7.0
 
+  # Syncfusion Calendar para agendamiento
+  syncfusion_flutter_calendar: ^31.1.19
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
