--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   # Syncfusion Calendar para agendamiento
   syncfusion_flutter_calendar: ^31.1.19
 
+  # Form Builder para formularios robustos
+  flutter_form_builder: ^10.1.0
+  form_builder_validators: ^11.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
