feat: Integración completa de OpenAI con configuración segura
- ✅ Integración completa de OpenAI para Flutter Web
- ✅ Servicio OpenAIService con configuración segura
- ✅ Widgets de diagnóstico y prueba de conexión
- ✅ Manejo inteligente de errores de cuota
- ✅ Fallbacks automáticos cuando la API no está disponible
- ✅ Página del asistente virtual completamente funcional
- ✅ Documentación y guías de configuración
- ✅ Configuración segura con variables de entorno
- ✅ Sin API keys expuestas en el código

Funcionalidades:
- OpenAIService con manejo de errores robusto
- Widgets de diagnóstico (OpenAITestWidget, OpenAIDiagnosticWidget)
- Widget de estado de cuota (OpenAIQuotaWidget)
- Chat completo con OpenAI (OpenAIIntegrationExample)
- Página del asistente virtual (AssistantPage)
- Documentación completa de configuración

Resuelve: Integración de OpenAI en Flutter Web
Mejora: Experiencia del usuario con IA avanzada

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -62,6 +62,12 @@ dependencies:
   flutter_form_builder: ^10.1.0
   form_builder_validators: ^11.0.0
 
+  # Variables de entorno para configuración segura
+  flutter_dotenv: ^5.1.0
+
+  # HTTP para comunicación con APIs
+  http: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
