feat: Implementar chatbot del reglamento interno con embeddings
- Agregar sistema de búsqueda semántica con embeddings
- Implementar filtros para saludos y preguntas no relacionadas
- Crear respuestas específicas y concisas para preguntas comunes
- Integrar TensorFlow Lite para embeddings avanzados
- Mejorar diseño con botón verde y campo de texto neutro
- Agregar documentación completa del sistema
- Limpiar código obsoleto de OpenAI
- Optimizar respuestas del chatbot para mejor UX

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -3,6 +3,9 @@ openai_config_local.dart
 .env
 .env.local
 
+# Archivos de configuración local
+lib/core/infrastructure/services/openai_config_local.dart
+
 # Archivos de Flutter
 build/
 .dart_tool/
