--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -62,11 +62,10 @@ dependencies:
   flutter_form_builder: ^10.1.0
   form_builder_validators: ^11.0.0
 
-  # Variables de entorno para configuración segura
-  flutter_dotenv: ^5.1.0
+  # TensorFlow Lite para embeddings avanzados
+  tflite_flutter: ^0.9.1
+  tflite_flutter_helper: ^0.2.1
 
-  # HTTP para comunicación con APIs
-  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -90,9 +89,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/reglamento_interno.md
+    - assets/models/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
